version 11.0
date: dd/mm/yyyy
  * added the possibility to hide the stack trace in error responses
  * added a connector to EcoPortal and other catalogs based on OntoPortal
  * introduced SuperUser
    - allowed SuperUser to create project where it is automatically set as Project Manager.
  * improved management of special variables in CFs, and the definition of CC vs CR
  * improved authorization checks to several APIs
  * improved messaging in the update routines
  * added support in Sheet2RDF for single tables in MySQL, MariaDB and PostgreSQL
  * added the possibility to create downloads of the main graph
  * added a service to suggest SPARQL endpoints for federation (by searching matching repositories hosted on the same
    GraphDB server than the contextual project)
  * updated dependency on CODA 1.7.5-SNAPSHOT
  * updated dependency on MAPLE 0.0.11-SNAPSHOT
  * updated dependency on Sheet2RDF 5.0.0-SNAPSHOT (to manage DB tables)
  * updated various dependencies

version 10.2.1
date: 07/02/2022
  * better semantic checks for the Manchester expressions, with the possibility to disable such checks
  * added the possibility to avoid semantic checks when creating/updating triples from a Manchester expression
  * replaced usage of users' email in favour of IRIs in system settings
  * fixed several bugs in Global Search (number of returned results, better checks on the creation of the indexes for SKOSXL projects, creting the indexes for OWL projects, deletion of indexes for a specific project)
  * fixed the use of Lucene FTS index in "GraphDB SE" projects during searches

version 10.2
date: 26/01/2022
  * Better performances in getTopConcepts and getNarrowerConcepts, thanks to Saku Seppälä for the contribution!
  * Added localization for Spanish, thanks to Juan Antonio Pastor Sánchez for the contribution!