@@ -1,18 +1,18 @@
 package it.uniroma2.art.semanticturkey.event.support;
 
-import java.util.Set;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
-import org.apache.commons.collections4.SetUtils;
+import it.uniroma2.art.semanticturkey.event.Event;
 import org.osgi.framework.BundleContext;
+import org.osgi.framework.Constants;
+import org.osgi.framework.InvalidSyntaxException;
 import org.osgi.util.tracker.ServiceTracker;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.ApplicationListener;
 
-import it.uniroma2.art.semanticturkey.event.Event;
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * An {@link ApplicationListener} that listens for {@link EventListenerTest} objects and propagates them to
@@ -28,15 +28,17 @@ public class CrossContextPropagationEventListener implements ApplicationListener
 
 	private ServiceTracker serviceTracker;
 
-	private static ThreadLocal<Set<Event>> alreadyPropagatedHolder;
+	private static Set<Event> alreadyPropagated = ConcurrentHashMap.newKeySet();
 
 	public CrossContextPropagationEventListener() {
-		alreadyPropagatedHolder = ThreadLocal.withInitial(() -> SetUtils.newIdentityHashSet());
 	}
 
 	@PostConstruct
-	public void init() {
-		serviceTracker = new ServiceTracker(bundleContext, ApplicationEventPublisher.class.getName(), null);
+	public void init() throws InvalidSyntaxException {
+		long selfBundleId = bundleContext.getBundle().getBundleId();
+		serviceTracker = new ServiceTracker(bundleContext,
+				bundleContext.createFilter("(&(" + Constants.OBJECTCLASS +  "=" + ApplicationEventPublisher.class.getName() +")(!(service.bundleid=" + selfBundleId +")))"),
+				null);
 		serviceTracker.open();
 	}
 
@@ -49,21 +51,18 @@ public class CrossContextPropagationEventListener implements ApplicationListener
 
 	@Override
 	public void onApplicationEvent(Event event) {
-		Set<Event> alreadyPropagated = alreadyPropagatedHolder.get();
+		boolean notAlreadyPropagated = alreadyPropagated.add(event);
 
-		if (alreadyPropagated.contains(event)) {
-			return; // avoids repeated propagation
-		}
+		if (notAlreadyPropagated) {
+			try {
+				Object[] eventPublishers = serviceTracker.getServices();
 
-		alreadyPropagated.add(event);
-		try {
-			Object[] eventPublishers = serviceTracker.getServices();
-
-			for (Object pub : eventPublishers) {
-				((ApplicationEventPublisher) pub).publishEvent(event);
+				for (Object pub : eventPublishers) {
+					((ApplicationEventPublisher) pub).publishEvent(event);
+				}
+			} finally {
+				alreadyPropagated.remove(event);
 			}
-		} finally {
-			alreadyPropagated.remove(event);
 		}
 	}
 }
